increase line height. also prevent file names from wrapping lines.

--- a/src/styles/brackets_patterns_override.less
+++ b/src/styles/brackets_patterns_override.less
@@ -1,4 +1,4 @@
-/* Brackets patterns (and overrides and re-definitions of Bootstrap patterns) 
+/* Brackets patterns (and overrides and re-definitions of Bootstrap patterns)
  *
  * This file should contain all _reusable_ UI elements / LESS definitions
  * That is, things that will either a.) be used for more than one element or
@@ -233,17 +233,20 @@
 
 .dialog-message {
     font-size: 17px;
+    line-height: 26px;
     margin-bottom: 20px;
     font-weight: @font-weight-light;
 }
 
 /* bootstrap's base color for generic li is gray */
 .dialog-message li {
+    line-height: 26px;
     color: @grayDark;
 }
 
 .dialog-filename {
     font-weight: @font-weight-semibold;
+    white-space: nowrap;
 }
 
 .btn {
